--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <li class="nav-item" style="list-style: none;">
                             <a class="nav-link" href="#">Contact</a>
                           </li>
-                        <button class="btn btn-outline-primary my-2 my-sm-0">Get Started</button>
+                        <button class="btn btn-primary my-2 my-sm-0">Get Started</button>
                     </form>
             </div>
             </div>
@@ -65,7 +65,7 @@
         <div class="flex p-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 m-auto">
                     <h2>Se Offer Modern Solutions For Growing Your Business</h2>
                     <p>We are team of talented designers making websites wtih Bootstrap</p>
                     <button class="btn btn-primary my-2 my-sm-0">
