--- a/index.html
+++ b/index.html
@@ -78,7 +78,36 @@
             </div>
         </div>
     </header>
-  
+    <section class="p-5" id="About">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="text">
+              <h5>Who Are You</h5>
+              <h2>
+                Expeditda Voluptas Omnis Cupditate Totam
+                eveniet nobis shit iste, Dolores est repellat
+                Corrupti reprehenderit. 
+              </h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing 
+                elit. Minima, atque? Adipisci eum delectus dolores quam? Culpa,
+                et non? Eaque vel quasi aperiam non in commodi placeat nihil 
+                nulla repudiandae! Dolor.
+              </p>
+              <button class="btn btn-primary my-2 my-sm-0">
+                Read More <i class="fas fa-arrow-right"></i>
+              </button>
+            </div>
+          </div>
+          <div class="col-lg-6 p-2">
+            <div class="img">
+              <img src="img/about.jpg" alt="" class="img-fluid">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!--! =============== Link Script ======================= -->
     <script src="js/jquery-2.1.1.js"></script>
