--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="#About">ِAbout</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="#Services">Services</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">Portfolio</a>
@@ -81,7 +81,7 @@
     <section class="p-5" id="About">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-md-6">
             <div class="text">
               <h5>Who Are You</h5>
               <h2>
@@ -98,7 +98,7 @@
               </button>
             </div>
           </div>
-          <div class="col-lg-6 p-2">
+          <div class="col-lg-6 col-md-6 p-2">
             <div class="img">
               <img src="img/about.jpg" alt="" class="img-fluid">
             </div>
@@ -106,7 +106,35 @@
         </div>
       </div>
     </section>
-
+    <section class="Valuse">
+      <div class="container">
+        <h5>Our Values</h5>
+        <h4 class="text-center">Odit est Perspiclatis laborum et dicta</h4>
+        <div class="row p-2">
+          <div class="col-lg-4">
+            <div class="img-bg">
+              <img src="img/values-1.png" alt="" class="img-fluid">
+              <h3>Lorem ipsum dolor sit.</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="img-bg">
+              <img src="img/values-2.png" alt="" class="img-fluid">
+              <h3>Lorem ipsum dolor sit.</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="img-bg">
+              <img src="img/values-3.png" alt="" class="img-fluid">
+              <h3>Lorem ipsum dolor sit.</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--! =============== Link Script ======================= -->
     <script src="js/jquery-2.1.1.js"></script>
     <script src="js/bootstrap.min.js"></script>
